# dumb_proxy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
config/: default.toml
docs/: configuration.md
src/: config_loader.rs  config_spawner.rs  http.rs  logger.rs  main.rs  socks4.rs  socks5.rs  tcppm.rs  util.rs
src/http/: connection_pool.rs  errors.rs  header_line_parser.rs  header_value_parser.rs  headers.rs  headers_utils.rs  mod.rs  parser.rs  request.rs  response.rs
src/http/error_pages/: 400.html  502.html
src/socks4/: mod.rs  parser.rs
src/socks5/: mod.rs  parser.rs
