[package]
name = "proxy"
version = "0.1.0"
authors = ["Heorhi Valakhanovich <valahanovich@tut.by>"]
edition = "2021"

[dependencies]
chrono = "0.4"
tokio = {version = "1.13", features = ["full"] }
tokio-io-timeout = "1.2"
futures = "0.3"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
nom = "7.0"
lru-cache = "0.1"
socket2 = "0.4"

[profile.release]
lto = true